--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body{
 @keyframes glow{
     0%, 100%{
         color: #fff;
-        text-shadow: 0 0 12px #fbff00, 0 0 50px #fbff00, 0 0 100px #fbff00;
+        text-shadow: 0 0 12px #00bfff, 0 0 50px #00bfff, 0 0 100px #00bfff;
     }
     10%, 90%{
         color: #696565;
@@ -70,7 +70,7 @@ body{
 }
 
 .description{
-    color: #fbff00;
+    color: #00bfff;
 }
 
 /* Estilo para el botón */
@@ -96,5 +96,3 @@ body{
     background-color: orange; /* Cambia el color de fondo al pasar el mouse a naranja */
     box-shadow: 0 0 10px yellow, 0 0 20px yellow, 0 0 30px yellow; /* Efecto de resplandor amarillo */
   }
-  
-  
